# SDL-GameEngine

./: CMakeLists.txt
cmake_modules/: FindSDL.cmake
include/: Renderer.hpp
include/gameObject/: Transform.hpp
include/renderer/: Renderer.hpp  RendererException.hpp
include/utils/: Vector.hpp
src/: Renderer.cpp
src/gameObject/: Transform.cpp
src/renderer/: Renderer.cpp  RendererException.cpp
src/tests/: test.cpp
src/utils/: Vector.cpp
